# Autonomous-Research-Agent

./: .gitignore  Plan.md  README.md  example.env  pyproject.toml  requirements.txt  streamlit_app.py
logs/: agent_run_043225791996.jsonl  agent_run_25b41551f742.jsonl  agent_run_30da9152cc2e.jsonl  agent_run_323d23896e3e.jsonl  agent_run_53962d089626.jsonl  agent_run_5707d7c866dc.jsonl  agent_run_75734e158fed.jsonl  agent_run_958d8bcc6bb4.jsonl  agent_run_c123e2931967.jsonl  agent_run_d673b4fb742d.jsonl  agent_run_dc9bdc1620ca.jsonl  agent_run_f802feb0a02f.jsonl  agent_run_fbda6e53ec72.jsonl
src/autonomous_research_agent/: __init__.py  cli.py  config.py  dedup.py  fetchers.py  graph.py  llm.py  models.py  observability.py  prompts.py
