[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Simple autonomous research agent built with OpenAI and LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langsmith>=0.1.95",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.37.0",
  "tavily-python>=0.5.0",
]

[project.scripts]
autonomous-research-agent = "autonomous_research_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
